<resources>
    <string name="app_name">嘉时分享</string>
    <!--首页-->
    <string name="index_home">首页</string>
    <string name="index_audit">审核</string>
    <string name="index_message">消息</string>
    <string name="index_mine">我的</string>
    <string name="default_location_text">石家庄</string>
    <string name="find_car">立 即 找 车</string>
    <string name="end_car">还车</string>
    <string name="choose_end_car_time">请选择还车时间</string>
    <string name="start_car">取车</string>
    <string name="choose_start_car_time">请选择取车时间</string>
    <string name="vehicle_investment">车辆投资</string>
    <string name="my_car">我的车辆</string>
    <string name="more_text">查看更多</string>
    <string name="lease_title">省心优选</string>
    <string name="lease_desc">高品质贴心服务，即可体验</string>
    <string name="investment_title">投资优选</string>
    <string name="investment_desc">您的托付，我们的责任</string>
    <string name="audit_title">审核车辆列表</string>
    <string name="message_title">消息</string>
    <string name="become_auditor">成为审核员</string>
    <string name="btn_submit_text">提交</string>
    <string name="upload_id_card">上传身份证</string>
    <string name="upload_driver">上传驾驶证</string>
    <string name="upload_driving">上传行驶证</string>
    <string name="id_card">身份证号</string>
    <string name="id_cart_num">请填写正确的身份证号</string>
    <string name="actual_name">请填写真实姓名</string>
    <string name="correct_phone_number">请填写正确的手机号</string>

    <string name="owners">车主端</string>
    <string name="me_garage">我的车库</string>
    <string name="me_garage_desc">尊敬的车主，发布信息需要认证！</string>
    <string name="un_auth">未认证</string>
    <string name="auth">已认证</string>
    <string name="total_value">总价值</string>
    <string name="vehicle">车辆</string>
    <string name="total_rent">租金总计</string>
    <string name="omitted">--</string>
    <string name="owners_mortgage">我要抵押</string>
    <string name="owners_rent">我要出租</string>
    <string name="relax">放心无忧</string>
    <string name="fast">快速赚钱</string>
    <string name="fast_desc">无忧0成养车，闲置时间赚钱</string>
    <string name="safe">安全可靠</string>
    <string name="safe_desc">为爱车全方位保驾护航</string>
    <string name="license_plate_number">车辆牌号</string>
    <string name="please_license_plate_number">请输入车牌</string>
    <string name="please_enter">请输入</string>
    <string name="please_choose">请选择</string>

    <!--我的-->
    <string name="un_edit_nickname">您还未编辑昵称 ~ ~</string>
    <string name="account_balance">账户余额</string>
    <string name="integral">积分</string>
    <string name="rental_order">出租订单</string>
    <string name="view_all_order">查看所有订单</string>
    <string name="posted">发布的</string>
    <string name="to_be_rented">待租赁</string>
    <string name="leased">已租赁</string>
    <string name="my_message">我的消息</string>
    <string name="my_auth">我的认证</string>
    <string name="audit_orders">审核订单</string>
    <string name="lease_orders">租赁订单</string>
    <string name="investment_orders">投资订单</string>
    <string name="mortgage_orders">抵押订单</string>
    <string name="my_car_mine">我的车辆</string>
    <string name="call_car">联系车主</string>
    <string name="modify_immediately">立即修改</string>
    <string name="edit_desc">昵称不能超过20个字符，不能输入空格</string>

    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="sign_out">退出登录</string>
    <string name="login_password">登录密码</string>
    <string name="modify_password">修改密码</string>
    <string name="my_mobile">我的手机号</string>
    <string name="bound">已绑定</string>

    <string name="base_info">基础信息</string>
    <string name="mileage_num">表显里程</string>
    <string name="buy_car_time">购车时间</string>
    <string name="displacement">变速箱/排量</string>
    <string name="tenant_info">租客信息</string>
    <string name="pick_up_car">取车地点</string>
    <string name="pick_up_car_desc">请与租客电话确认</string>
    <string name="car_details">车辆详情</string>

    <string name="wei_xin_pay">微信支付</string>
    <string name="ali_pay">支付宝</string>
    <string name="yu_e">余额</string>
    <string name="order_delete">删除</string>
    <string name="order_cancel">取消</string>
    <string name="audit_completed">开始审核</string>
    <string name="order_see_details">查看详情</string>
    <string name="order_confirm">确认</string>
    <string name="order_contact_owner">联系车主</string>
    <string name="order_pay">支付</string>
    <string name="order_edit">编辑</string>
    <string name="order_choose_auditor">选择审核员</string>
    <string name="vehicle_deposit">车辆押金确认</string>
    <string name="illegal_deposit">违章押金确认</string>
    <string name="repayment">还款</string>
    <string name="lease_info">租客信息</string>
    <string name="basic_info">基础信息</string>
    <string name="owners_info">车主信息</string>
    <string name="rent">租金</string>
    <string name="car_deposit">车辆押金</string>
    <string name="car_illegal_deposit">违章押金</string>
    <string name="insurance">保险费</string>
    <string name="use_points">使用积分</string>
    <string name="et_num_points">请填写积分数量</string>
    <string name="balance_withdrawals">余额提现</string>

    <string name="bank_card_add">添加</string>
</resources>
