<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:id="@+id/nested_scroll_view"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical"
                                            android:overScrollMode="never"
                                            android:scrollbars="none"
                                            tools:ignore="PxUsage,RtlHardcoded">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bigkoo.convenientbanner.ConvenientBanner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="400px"
            tools:ignore="PxUsage"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:text="@string/me_garage"
            android:textColor="@color/color_333333"
            android:textSize="30px"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_garage_desc"
                android:textColor="@color/color_666666"
                android:textSize="24px"/>

            <TextView
                android:id="@+id/tv_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28px"
                android:background="@drawable/auth"
                android:text="@string/un_auth"
                android:textColor="@color/color_FF5C60"
                android:textSize="24px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45px"
            android:layout_marginTop="54px">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="140px"
                    android:layout_height="50px"
                    android:background="@mipmap/car_bg_value"
                    android:gravity="center"
                    android:text="@string/total_value"
                    android:textColor="@color/color_C155BE"
                    android:textSize="24px"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20px"
                    android:layout_marginTop="20px">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3px"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="80px"
                        android:background="@color/color_F4F8F9"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/red_dot"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_total_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/omitted"
                    android:textColor="@color/color_999999"
                    android:textSize="36px"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="140px"
                    android:layout_height="50px"
                    android:background="@mipmap/car_bg_vehicle"
                    android:gravity="center"
                    android:text="@string/vehicle"
                    android:textColor="@color/color_C155BE"
                    android:textSize="24px"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20px"
                    android:layout_marginTop="20px">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3px"
                        android:layout_centerInParent="true"
                        android:background="@color/color_F4F8F9"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/red_dot"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_car_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/omitted"
                    android:textColor="@color/color_999999"
                    android:textSize="36px"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="140px"
                    android:layout_height="50px"
                    android:background="@mipmap/car_bg_rent"
                    android:gravity="center"
                    android:text="@string/total_rent"
                    android:textColor="@color/color_C155BE"
                    android:textSize="24px"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20px"
                    android:layout_marginTop="20px">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3px"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="80px"
                        android:background="@color/color_F4F8F9"
                        tools:ignore="RtlHardcoded"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/red_dot"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_total_rent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/omitted"
                    android:textColor="@color/color_999999"
                    android:textSize="36px"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="626px"
            android:layout_height="60px"
            android:layout_gravity="center"
            android:background="@drawable/owners_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_mortgage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/owners_mortgage"
                android:textColor="@color/color_333333"
                android:textSize="28px"/>

            <View
                android:layout_width="3px"
                android:layout_height="40px"
                android:background="@color/color_FFFFFF"/>

            <TextView
                android:id="@+id/tv_rent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/owners_rent"
                android:textColor="@color/color_333333"
                android:textSize="28px"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:layout_marginTop="45px"
            android:background="@color/color_F4F8F9"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:text="@string/relax"
            android:textColor="@color/color_333333"
            android:textSize="30px"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25px"
            android:paddingLeft="50px"
            android:paddingRight="50px"
            android:paddingTop="25px">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/car_icon_fast_dis"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12px"
                    android:text="@string/fast"
                    android:textColor="@color/color_333333"
                    android:textSize="28px"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_desc"
                    android:textColor="@color/color_999999"
                    android:textSize="24px"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25px"
            android:paddingLeft="50px"
            android:paddingRight="50px"
            android:paddingTop="25px">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/car_icon_security_dis"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12px"
                    android:text="@string/safe"
                    android:textColor="@color/color_333333"
                    android:textSize="28px"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safe_desc"
                    android:textColor="@color/color_999999"
                    android:textSize="24px"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/color_F4F8F9"/>

        <ImageView
            android:id="@+id/foot_image"
            android:layout_width="match_parent"
            android:layout_height="240px"
            android:src="@drawable/foot"/>
    </com.zhy.autolayout.AutoLinearLayout>
</android.support.v4.widget.NestedScrollView>