<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:orientation="vertical"
              tools:ignore="PxUsage,RtlHardcoded,RtlSymmetry">

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:background="@color/color_F4F8F9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lease_title"
                android:textColor="@color/color_333333"
                android:textSize="32px"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lease_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_text"
                android:textColor="@color/color_FF5C60"
                android:textSize="26px"/>
        </LinearLayout>

        <TextView
            android:id="@+id/lease_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lease_desc"
            android:textColor="@color/color_999999"
            android:textSize="24px"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30px">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"/>
    </RelativeLayout>


</LinearLayout>